--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -1,5 +1,14 @@
 @import "tailwindcss";
 
+.scrollbar-hide {
+  scrollbar-width: none;
+  -ms-overflow-style: none;  
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none; 
+}
+
 *{
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
